Resolving contrast issue in About page

--- a/sass/pages/_about.scss
+++ b/sass/pages/_about.scss
@@ -37,11 +37,11 @@
     margin-top: 50px;
 
     h2 {
-      opacity: .6;
       margin-top: 10px !important;
       margin-bottom: 20px;
       font-size: 24px;
       font-weight: 500;
+      color: $body-text-color;
       border: 0;
       padding: 0;
     }
